# deep-cuneiform

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements-deepcuneiform-2025-11-13.txt  serve.py  train.py
.devcontainer/: devcontainer.json
data/: download_cdli.py  download_sample.py  test_cdli_api.py
data/annotations/: cdli_P000001.atf  cdli_P000002.atf  cdli_P000003.atf  cdli_P000004.atf  cdli_P000005.atf  cdli_P000006.atf  cdli_P000007.atf  cdli_P000008.atf  cdli_P000009.atf  cdli_P000010.atf  cdli_P000011.atf  cdli_P000012.atf  cdli_P000013.atf  cdli_P000014.atf  cdli_P000015.atf  cdli_P000022.atf  cdli_P000023.atf  cdli_P000024.atf  cdli_P000025.atf  cdli_P000030.atf  cdli_P000031.atf  cdli_P000033.atf  cdli_P000038.atf  cdli_P000039.atf  cdli_P000041.atf  cdli_P000042.atf  cdli_P000043.atf  cdli_P000045.atf  cdli_P000046.atf  cdli_P000047.atf  cdli_P000048.atf  cdli_P000050.atf  cdli_P000051.atf  cdli_P000053.atf  cdli_P000054.atf  cdli_P000056.atf  cdli_P000057.atf  cdli_P000058.atf  cdli_P000060.atf  cdli_P000062.atf  (+46 more)
data/dictionaries/: akkadian_converted.json  akkadian_words.json  atf_unicode_map.json  manual_sumerian_dict.txt  sumerian_dict.txt  sumerian_logograms.json
data/dictionaries/akkadian/: basic_akkadian_dict.json
data/dictionaries/clauses/: stock_medical_clauses.json
data/dictionaries/medical/: medical_compound_phrases.json
data/dictionaries/plants/: plants_and_minerals.json
data/dictionaries/ritual/: ritual_terms.json
lib/atf2unicode/: main.py
lib/translators/: __init__.py  akkadian_translator.py  base_translator.py  language_detector.py  sumerian_translator.py
tools/: convert_akkadian_dict.py  download_cdli.py  lookup_cdli.py  translate_atf.py  visualize_tablet.py
